--- a/orchestra-ai/package.json
+++ b/orchestra-ai/package.json
@@ -6,9 +6,15 @@
   "engines": {
     "vscode": "^1.92.0"
   },
-  "categories": [
-    "Other"
-  ],
+ "author": {
+    "name": "ameritusweb"
+  },
+  "categories": ["Other"],
+  "icon": "images/icon.png",
+  "galleryBanner": {
+    "color": "#C80000",
+    "theme": "dark"
+  },
   "activationEvents": [],
   "main": "./dist/extension.js",
   "contributes": {
