--- a/orchestra-ai/package.json
+++ b/orchestra-ai/package.json
@@ -95,6 +95,7 @@
     "@types/mocha": "^10.0.7",
     "@types/node": "20.x",
     "@types/vscode": "^1.92.0",
+    "@types/zen-observable": "^0.8.7",
     "@typescript-eslint/eslint-plugin": "^7.14.1",
     "@typescript-eslint/parser": "^7.11.0",
     "@vscode/test-cli": "^0.0.9",
