--- a/orchestra-ai/tsconfig.json
+++ b/orchestra-ai/tsconfig.json
@@ -5,12 +5,20 @@
 		"lib": [
 			"ES2022"
 		],
+		"jsx": "react",
 		"sourceMap": true,
+		"allowJs": true,
+		"checkJs": true,
 		"rootDir": "src",
-		"strict": true   /* enable all strict type-checking options */
+		"noEmit": true,
+		"strict": false,   /* enable all strict type-checking options */
 		/* Additional Checks */
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
-		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
+		"noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
 		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
-	}
+	},
+	"include": [
+		"global.d.ts",
+		"src"
+	]
 }
