--- a/orchestra-ai/package.json
+++ b/orchestra-ai/package.json
@@ -99,6 +99,7 @@
   },
   "dependencies": {
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
+    "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
