--- a/orchestra-ai/package.json
+++ b/orchestra-ai/package.json
@@ -52,6 +52,12 @@
           "contextualTitle": "My View Title"
         },
         {
+          "id": "orchestraVersionControlView",
+          "type": "webview",
+          "name": "Version Control View",
+          "contextualTitle": "My View Title"
+        },
+        {
           "id": "orchestraTestView",
           "type": "webview",
           "name": "Test View",
@@ -109,6 +115,7 @@
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-syntax-highlighter": "^15.5.0",
     "zen-observable": "^0.10.0"
   }
 }
