--- a/sonata-ui/package.json
+++ b/sonata-ui/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "ignore": "^5.3.2",
     "lucide-react": "^0.428.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
@@ -23,7 +24,8 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-use": "^17.5.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
