--- a/sonata-ui/package.json
+++ b/sonata-ui/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.428.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-color": "^2.19.3",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
