--- a/sonata-ui/package.json
+++ b/sonata-ui/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@lucide/lab": "^0.1.2",
     "@vitejs/plugin-react": "^4.3.1",
     "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "ignore": "^5.3.2",
+    "lucide": "^0.429.0",
     "lucide-react": "^0.428.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
@@ -25,6 +27,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-use": "^17.5.1",
+    "svgson": "^5.3.1",
     "tailwindcss-animate": "^1.0.7",
     "yargs": "^17.7.2"
   },
